# zephyr

./: FSU_TEST_SUMMARY.md  OVERHEAD_TIME_ANALYSIS.md  PAWR_IMPLEMENTATION_SUMMARY.md
doc/connectivity/bluetooth/: features.rst
drivers/clock_control/: nrf5_power_clock.c
drivers/flash/: CMakeLists.txt  Kconfig.nrf  Kconfig.nrf_rram  soc_flash_nrf.c
drivers/usb/device/: CMakeLists.txt  Kconfig  usb_dc_nrf5.c
dts/arm/nordic/: nrf7120_cpurad.dtsi
include/bluetooth/: bluetooth.h  hci.h
include/zephyr/bluetooth/: bluetooth.h  hci_types.h
samples/bluetooth/bap_broadcast_assistant/: overlay-bt_ll_sw_split.conf  prj.conf
samples/bluetooth/bap_broadcast_sink/: CMakeLists.txt  Kconfig  overlay-bt_ll_sw_split.conf  prj.conf
samples/bluetooth/bap_broadcast_source/: Kconfig  overlay-bt_ll_sw_split.conf  sample.yaml
samples/bluetooth/broadcaster_decision/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bluetooth/broadcaster_multiple/: overlay-bt_ll_sw_split.conf
samples/bluetooth/central_gatt_write/: Kconfig.gatt_write  prj.conf
samples/bluetooth/hci_ipc/: CMakeLists.txt  extra-bis-bt_ll_sw_split.conf  extra-bt_mesh-bt_ll_sw_split.conf  extra-cis-bt_ll_sw_split.conf  extra-df-bt_ll_sw_split.conf  extra-iso-bt_ll_sw_split.conf  nrf5340_cpunet_bis-bt_ll_sw_split.conf  nrf5340_cpunet_cis-bt_ll_sw_split.conf  nrf5340_cpunet_df-bt_ll_sw_split.conf  nrf5340_cpunet_iso-bt_ll_sw_split.conf  nrf5340_cpunet_iso_central-bt_ll_sw_split.conf
samples/bluetooth/hci_ipc/boards/: nrf54h20dk_nrf54h20_cpurad.conf
samples/bluetooth/hci_rpmsg/: nrf5340_cpunet_bis-bt_ll_sw_split.conf  nrf5340_cpunet_cis-bt_ll_sw_split.conf  nrf5340_cpunet_iso-bt_ll_sw_split.conf  (+4 more)
samples/bluetooth/hci_usb/: prj.conf
samples/bluetooth/observer_broadcaster_multiple/: CMakeLists.txt  extra-bt_ll_sw_split.conf  prj.conf
samples/bluetooth/observer_broadcaster_multiple/boards/: nrf52833dk_nrf52833.overlay  nrf54h20dk_nrf54h20_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
subsys/bluetooth/: CMakeLists.txt  Kconfig
tests/bluetooth/controller/ctrl_prepare_pipeline/: CMakeLists.txt  INTEGRATION.md  Kconfig  README.md  SUMMARY.md  TEST_REFERENCE.md  prj.conf  testcase.yaml
tests/bluetooth/controller/ctrl_prepare_pipeline/src/: main.c  test_common.h  test_ull_prepare_basic.c  test_ull_prepare_edge_cases.c  test_ull_prepare_iterator.c  test_ull_prepare_ordering.c  ull_prepare_impl.c
tests/bsim/bluetooth/host/adv/decision/: CMakeLists.txt  prj_broadcaster.conf  prj_observer.conf  testcase.yaml
tests/bsim/bluetooth/host/adv/decision/src/: broadcaster_decision.c  observer_decision.c
tests/bsim/bluetooth/host/adv/decision/tests_scripts/: run.sh
(+346 files in other folders)
